--- a/Ruby on Rails/Project: Blog App/blog/app/views/comments/_comment.html.erb
+++ b/Ruby on Rails/Project: Blog App/blog/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <p>
     <strong>Commenter:</strong>
-    <%= comment.Commenter%>
+    <%= comment.commenter%>
 </p>
 <p>
     <strong>Comment:</strong>
