Finished part 9, deleting comments

--- a/Ruby on Rails/Project: Blog App/blog/app/views/comments/_comment.html.erb
+++ b/Ruby on Rails/Project: Blog App/blog/app/views/comments/_comment.html.erb
@@ -6,3 +6,10 @@
     <strong>Comment:</strong>
     <%= comment.body %>
 </p>
+
+<p>
+    <%' article_path(@article) == [comment.article, comment]' %>
+    <%= link_to 'Destroy Comment', article_path(@article), 
+                method: :delete,
+                data: { confirm: 'Are you sure?' } %>
+</p>
