--- a/Ruby on Rails/Project: Blog App/blog/app/views/articles/show.html.erb
+++ b/Ruby on Rails/Project: Blog App/blog/app/views/articles/show.html.erb
@@ -4,7 +4,9 @@
 
 <ul>
     <li><%= link_to "Edit", edit_article_path(@article) %></li>
-    <li><%= link_to "Destroy", article_path(@article), method: :delete, data: { confirm: "Are you sure?"} %></li>
+    <li><%= link_to "Destroy", article_path(@article), 
+                    method: :delete, 
+                    data: { confirm: "Are you sure?"} %></li>
 </ul>
 
 <h2>Comments</h2>
