--- a/Ruby on Rails/Project - Forms/re-former/app/views/users/new.html.erb
+++ b/Ruby on Rails/Project - Forms/re-former/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Users</h1>
-
+<h1>New User</h1>
+<!--
   <form accept-charset="UTF-8" action="/users" method="post">
     <label for="user">Enter name</label>
     <input type="text" name="user[username]">
@@ -13,3 +13,41 @@
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
     <input name="commit" type="submit" value="Create" data-disable-with="Create" />
   </form>
+-->
+<!--
+  <%= form_tag('/users') do %>
+    <div>
+    <%= label_tag(:user, 'Enter username')  %><br>
+    <%= text_field_tag(:username) %>
+    </div>
+    <%= label_tag(:email, 'Enter email')  %><br>
+    <%= email_field_tag(:email) %>
+    <div>
+    <%= label_tag(:password, 'Enter password') %><br>
+    <%= password_field_tag(:password) %>
+    </div>
+
+    <%= submit_tag('Create')  %>
+  <% end %>
+-->
+
+<%= form_with model: User.new do |form| %>
+  <div>
+    <%= form.label :username %><br>
+    <%= form.text_field :username, placeholder: 'Enter username' %>
+  </div>
+
+  <div>  
+    <%= form.label :email %><br>
+    <%= form.email_field :email, placeholder: 'Enter email'%>
+  </div>
+
+  <div>  
+    <%= form.label :password %><br>
+    <%= form.password_field :password, placeholder: 'Enter password' %>
+  </div>
+
+  <div>
+    <%= form.submit('Create') %>
+  </div>
+<% end %>
