--- a/Ruby on Rails/Project - Members only!/A Twitter Clone/twittter/app/views/tweeets/index.html.erb
+++ b/Ruby on Rails/Project - Members only!/A Twitter Clone/twittter/app/views/tweeets/index.html.erb
@@ -1,7 +1,19 @@
-<p style="color: green"><%= notice %></p>
+<!-- <p style="color: green"><%= notice %></p>
 
 <h1>Tweeets</h1>
+-->
 
+<section class="section">
+  <div class="container">
+    <div class="columns">
+      <%= render "trends" %>
+      <%= render "feed" %>
+      <%= render "who-to-follow" %>
+    </div>
+  </div>
+</section>
+
+<!--
 <div id="tweeets">
   <% @tweeets.each do |tweeet| %>
     <%= render tweeet %>
@@ -12,3 +24,4 @@
 </div>
 
 <%= link_to "New tweeet", new_tweeet_path %>
+-->
