--- a/Ruby on Rails/Project - Members only!/A Twitter Clone/twittter/app/views/devise/registrations/edit.html.erb
+++ b/Ruby on Rails/Project - Members only!/A Twitter Clone/twittter/app/views/devise/registrations/edit.html.erb
@@ -33,7 +33,7 @@
 
           <div class="field">
             <div class="control">
-            <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
+            <%= f.input :password, autocomplete: "off", hint: "Leave it blank if you don't want to change it", required: false, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
             </div>
           </div>
 
@@ -45,7 +45,7 @@
 
           <div class="field">
             <div class="control">
-              <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
+              <%= f.input :current_password, hint: "We need your current password to confirm your changes", required: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
             </div>
         </div>
    
@@ -55,8 +55,11 @@
 
         <hr />
         <h3 class="title is-5">Cancel my account</h3>
-        <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" } method: :delete %></p>
-   
+        <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { 
+          turbo_method: :delete, 
+          turbo_confirm: "Are you sure?" 
+          }  %></p>
+
       </div>
     </div>
   </div>
