Did it again using part of "A Twitter Clone"

--- a/Ruby on Rails/Project - Private Events/private-events/app/views/events/index.html.erb
+++ b/Ruby on Rails/Project - Private Events/private-events/app/views/events/index.html.erb
@@ -1,35 +1,14 @@
-<h1>Private Events</h1>
+<p style="color: green"><%= notice %></p>
 
-<% @events.each do |event| %>
-    <br />
-    <div style="border:solid; border-width:2px; width=100px">
-        <div>
-            <strong>Title:</strong>
-            <%= event.title %>
-        </div>
-        <br>
-        <div>
-            <strong>Body:</strong>
-            <%= event.body %>
-        </div>
-        <% if user_signed_in? %>
-            <strong>Author:</strong>
-            <%= event.user.email %>
-        <% end %>
-    </div>
+<h1>Events</h1>
 
-<% end %>
+<div id="events">
+  <% @events.each do |event| %>
+    <%= render event %>
+    <p>
+      <%= link_to "Show this event", event %>
+    </p>
+  <% end %>
+</div>
 
-<br />
-<% if user_signed_in? %>
-    <p>
-    <%= button_to "Logout", destroy_user_session_path, method: :delete %>
-    </p>
-<% else %>
-    <p>
-    <%= button_to 'Sign In', new_user_session_path %>
-    </p>
-    <p>
-    <%= button_to 'Sign Up', new_user_registration_path %>
-    </p>
-<% end %>
+<%= link_to "New event", new_event_path %>
