Fixed some layout and user logic

--- a/Ruby on Rails/Project - Private Events/private-events/app/views/events/index.html.erb
+++ b/Ruby on Rails/Project - Private Events/private-events/app/views/events/index.html.erb
@@ -1,6 +1,8 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Events</h1>
+<section class="section">
+  <div class="container">
+    <div class="columns">
 
 <div id="events">
   <% @events.each do |event| %>
@@ -11,4 +13,6 @@
   <% end %>
 </div>
 
-<%= link_to "New event", new_event_path %>
+    </div>
+  </div>
+</section>
