--- a/Ruby on Rails/Project - Private Events/private-events/app/views/events/show.html.erb
+++ b/Ruby on Rails/Project - Private Events/private-events/app/views/events/show.html.erb
@@ -2,9 +2,15 @@
 
 <%= render @event %>
 
-<div>
-  <%= link_to "Edit this event", edit_event_path(@event) %> |
-  <%= link_to "Back to events", events_path %>
+<section class="section">
+  <div class="container">
+    <div class="columns">
+      <div>
+        <%= link_to "Edit this event", edit_event_path(@event) %> |
+        <%= link_to "Back to events", events_path %>
 
-  <%= button_to "Destroy this event", @event, method: :delete %>
-</div>
+        <%= button_to "Destroy this event", @event, method: :delete %>
+      </div>
+    </div>
+  </div>
+</section>
