--- a/Ruby on Rails/Project - Private Events/private-events/app/views/users/_events.erb
+++ b/Ruby on Rails/Project - Private Events/private-events/app/views/users/_events.erb
@@ -1,45 +1,32 @@
 <div class="column is-half">
-    <% if user_signed_in? %>
-    <article class="media box">
-        <figure class="media-left">
-            <p class="image is-64x64">
-                <%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
-            </p>
-        </figure>
-            <div class="media-content">
-                <%= render "tweeets/form" %>
-            </div>
-    </article>
-    <% end %>
-
-    <% @tweeets.each do |tweeet| %>
+    <% current_user.hosted_events.each do |event| %>
         <div class="box">
             <article class="media">
                 <div class="media-left">
                     <figure class="image is-64x64">
-                        <%= gravatar_image_tag(tweeet.user.email, size: 64, alt: tweeet.user.name) %>
+                        <%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
                     </figure>
                 </div>
                 <div class="media-content">
                     <div class="content">
-                        <strong><%= tweeet.user.name %></strong><br/>
-                        <small><%= tweeet.user.username %></small><br/>
-                        <p><%= tweeet.tweeet %></p>
+                        <strong><%= current_user.name %></strong><br/>
+                        <small><%= current_user.username %></small><br/>
+                        <p><%= event.description %></p>
                     </div>
                     <% if user_signed_in? %>
                     <nav class="level">
                         <div class="level-left is-mobile">
-                            <%= link_to tweeet, class: "level-item" do %>
+                            <%= link_to event, class: "level-item" do %>
                                 <span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
                             <% end %>
 
-                            <%= link_to edit_tweeet_path(tweeet), class: "level-item" do %>
+                            <%= link_to edit_event_path(event), class: "level-item" do %>
                                 <span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
                             <% end %>
 
-                            <%= link_to tweeet, data: { 
+                            <%= link_to event, data: { 
                                 turbo_method: :delete,
-                                turbo_confirm: "Are you sure you want to delete this tweeet?"
+                                turbo_confirm: "Are you sure you want to delete this event?"
                                 } do %>
                                 <span class="icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
                             <% end %>
