--- a/Ruby on Rails/Project - Private Events/private-events/app/views/users/_events.erb
+++ b/Ruby on Rails/Project - Private Events/private-events/app/views/users/_events.erb
@@ -1,5 +1,53 @@
 <div class="column is-half">
+<% if current_user.hosted_events.any? %>
+    <h1 class="title">Hosted events</h1>
+<% end%>
     <% current_user.hosted_events.each do |event| %>
+        <div class="box">
+            <article class="media">
+                <div class="media-left">
+                    <figure class="image is-64x64">
+                        <%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
+                    </figure>
+                </div>
+                <div class="media-content">
+                    <div class="content">
+                        <strong><%= current_user.name %></strong><br/>
+                        <small><%= current_user.username %></small><br/>
+                        <p><%= event.description %></p>
+                    </div>
+                    <% if user_signed_in? %>
+                    <nav class="level">
+                        <div class="level-left is-mobile">
+                            <%= link_to event, class: "level-item" do %>
+                                <span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
+                            <% end %>
+
+                            <%= link_to edit_event_path(event), class: "level-item" do %>
+                                <span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
+                            <% end %>
+
+                            <%= link_to event, data: { 
+                                turbo_method: :delete,
+                                turbo_confirm: "Are you sure you want to delete this event?"
+                                } do %>
+                                <span class="icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+                            <% end %>
+                        </div>
+                    </nav>
+                    <% end %>
+                </div>
+            </article>
+        </div>
+    <% end %>
+</div>
+
+
+<div class="column is-half">
+<% if current_user.attended_events.any? %>
+    <h1 class="title">Attending events</h1>
+<% end%>
+    <% current_user.attended_events.each do |event| %>
         <div class="box">
             <article class="media">
                 <div class="media-left">
