--- a/Ruby on Rails/Project - Private Events/private-events/app/views/users/_events.erb
+++ b/Ruby on Rails/Project - Private Events/private-events/app/views/users/_events.erb
@@ -43,11 +43,13 @@
 </div>
 
 
+
 <div class="column is-half">
-<% if current_user.attended_events.any? %>
-    <h1 class="title">Attending events</h1>
-<% end%>
+    <% if current_user.attended_events.any? %>
+        <h1 class="title">Upcoming events</h1>
+    <% end%>
     <% current_user.attended_events.each do |event| %>
+    <% if event.date > Time.now %>
         <div class="box">
             <article class="media">
                 <div class="media-left">
@@ -57,32 +59,39 @@
                 </div>
                 <div class="media-content">
                     <div class="content">
-                        <strong><%= current_user.name %></strong><br/>
-                        <small><%= current_user.username %></small><br/>
-                        <p><%= event.description %></p>
+                        <strong>Host: <%= event.creator.name %></strong><br/>
+                        <small>Event name: <%= current_user.username %></small><br/>
+                        <p>Description: <%= event.description %></p>
                     </div>
-                    <% if user_signed_in? %>
-                    <nav class="level">
-                        <div class="level-left is-mobile">
-                            <%= link_to event, class: "level-item" do %>
-                                <span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
-                            <% end %>
-
-                            <%= link_to edit_event_path(event), class: "level-item" do %>
-                                <span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
-                            <% end %>
-
-                            <%= link_to event, data: { 
-                                turbo_method: :delete,
-                                turbo_confirm: "Are you sure you want to delete this event?"
-                                } do %>
-                                <span class="icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
-                            <% end %>
-                        </div>
-                    </nav>
-                    <% end %>
                 </div>
             </article>
         </div>
+        <% end %>
+    <% end %>
+</div>
+
+<div class="column is-half">
+    <% if current_user.attended_events.any? %>
+        <h1 class="title">Past events</h1>
+    <% end%>
+    <% current_user.attended_events.each do |event| %>
+    <% if event.date < Time.now %>
+        <div class="box">
+            <article class="media">
+                <div class="media-left">
+                    <figure class="image is-64x64">
+                        <%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
+                    </figure>
+                </div>
+                <div class="media-content">
+                    <div class="content">
+                        <strong>Host: <%= event.creator.name %></strong><br/>
+                        <small>Event name: <%= current_user.username %></small><br/>
+                        <p>Description: <%= event.description %></p>
+                    </div>
+                </div>
+            </article>
+        </div>
+        <% end %>
     <% end %>
 </div>
