--- a/Ruby on Rails/Stimulus - exercises/stimulus_project/app/views/cars/index.html.erb
+++ b/Ruby on Rails/Stimulus - exercises/stimulus_project/app/views/cars/index.html.erb
@@ -1,4 +1,3 @@
-<h3>Car index</h3>
-<div>
-<%= link_to "New car", new_car_path %>
-</div>
+<h1>A list of cars</h1>
+
+<%= link_to "Create a new car", new_car_path %>
