--- a/Ruby on Rails/Stimulus - exercises/stimulus_project/app/views/cars/new.html.erb
+++ b/Ruby on Rails/Stimulus - exercises/stimulus_project/app/views/cars/new.html.erb
@@ -1,3 +1,37 @@
-<h1>New car</h1>
+<h1>Create a new car</h1>
 
-<%= render "form", car: @car %>
+<%= form_with model: @car do |form| %>
+    <table>
+        <tr>
+            <th>Variant</th>
+            <th>Your input</th>
+        </tr>
+        <tr>
+        <%= form.fields_for :variants do |variants_form| %>
+        <tr>
+            <td><%= variants_form.label :model %></td>
+            <td><%= variants_form.text_field :model %></td>
+        </tr>
+        <tr>
+            <td><%= variants_form.label :color %></td>
+            <td><%= variants_form.text_field :color %></td>
+        </tr>
+        <tr>
+            <td><%= variants_form.label :seats %></td>
+            <td><%= variants_form.text_field :seats %></td>
+        </tr>
+        <tr>
+            <td><%= variants_form.label :horsepower %></td>
+            <td><%= variants_form.text_field :horsepower %></td>
+        </tr>
+        <tr>
+            <td><%= variants_form.label :engine_volume %></td>
+            <td><%= variants_form.text_field :engine_volume %></td>
+        </tr>
+        <% end %>
+    </table>
+    <br/>
+    <div>
+        <%= form.submit %>
+    </div>
+<% end %>
