--- a/Ruby on Rails/Stimulus - exercises/stimulus_project/app/views/cars/index.html.erb
+++ b/Ruby on Rails/Stimulus - exercises/stimulus_project/app/views/cars/index.html.erb
@@ -1,3 +1,14 @@
 <h1>A list of cars</h1>
+<% if @cars.any? %>
+<div>
+    <% @cars.each do |c| %>
+    <div>
+        <%= link_to c.id, c %>
+    </div>
+    <% end %>
+</div>
+<% else %>
+    <h3>No cars have been made yet</h3>
+<% end %>
 
 <%= link_to "Create a new car", new_car_path %>
