--- a/Ruby on Rails/Stimulus - exercises/stimulus_project/app/views/cars/_car.html.erb
+++ b/Ruby on Rails/Stimulus - exercises/stimulus_project/app/views/cars/_car.html.erb
@@ -1,5 +1,2 @@
-<% @car.variants.each do |variant| %>
-  <p>
-  <%= variant.engine_volume %>
-  </p>  
-<% end %>
+<div id="<%= dom_id car %>">
+</div>
