--- a/Ruby on Rails/Stimulus - exercises/stimulus_project/app/views/cars/show.html.erb
+++ b/Ruby on Rails/Stimulus - exercises/stimulus_project/app/views/cars/show.html.erb
@@ -4,7 +4,7 @@
 
 <div>
   <%= link_to "Edit this car", edit_car_path(@car) %> |
-  <%= link_to "Back to car", cars_path %>
+  <%= link_to "Back to cars", cars_path %>
 
   <%= button_to "Destroy this car", @car, method: :delete %>
 </div>
