Somewhat done with the stimulus project

--- a/Ruby on Rails/Stimulus - exercises/stimulus_project/app/views/cars/_car.html.erb
+++ b/Ruby on Rails/Stimulus - exercises/stimulus_project/app/views/cars/_car.html.erb
@@ -1,2 +1,6 @@
 <div id="<%= dom_id car %>">
+    <%= car.id %>
+    <%= car.variants.all.each do |var| %>
+        <%= var.id %>
+    <% end%>
 </div>
