--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
@@ -13,16 +13,67 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
+    
     <nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-end">
-      <div class="navbar-item">
-        <div class="buttons">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="https://bulma.io">
+          <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+        </a>
+      </div>
+
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item">
+            Home
+          </a>
+
+          <a class="navbar-item">
+            Documentation
+          </a>
+
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              More
+            </a>
+
+            <div class="navbar-dropdown">
+              <a class="navbar-item">
+                About
+              </a>
+              <a class="navbar-item">
+                Jobs
+              </a>
+              <a class="navbar-item">
+                Contact
+              </a>
+              <hr class="navbar-divider">
+              <a class="navbar-item">
+                Report an issue
+              </a>
+            </div>
+          </div>
+        </div>
+        
           <% if current_user %>
-            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'button is-link' %>
-          <% else %>
-            <%= link_to "Login", new_user_session_path, class: 'button is-link' %>
+            <a class="navbar-item">
+              Signed in as <%= current_user.email %>
+            </a>
           <% end %>
+
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="buttons">
+              <% if current_user %>
+                <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'button is-link' %>
+              <% else %>
+              <div class="button is-primary">
+                <%= link_to "Sign up", new_user_registration_path, class: "a-primary" %>
+              </div>
+              <div class="button is-light">
+                  <%= link_to "Login", new_user_session_path, class: "a-primary" %>
+              </div>
+              <% end %>
+            </div>
           </div>
         </div>
       </div>
