Added self join for friends

--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
@@ -64,6 +64,7 @@
           <div class="navbar-item">
             <div class="buttons">
               <% if current_user %>
+                <%= link_to 'Edit profile', edit_user_registration_path, class: 'button is-link' %>
                 <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'button is-link' %>
               <% else %>
               <div class="button is-primary">
