--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
@@ -16,15 +16,19 @@
     
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
+        <a class="navbar-item">
+        <%= link_to root_path, class: "navbar-item" do %>
           <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+        <% end %>
         </a>
       </div>
 
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item">
-            Home
+            <%= link_to root_path, class: "navbar-item" do %>
+              Home
+            <% end %>
           </a>
 
           <a class="navbar-item">
