--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_post.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_post.html.erb
@@ -1,17 +1,10 @@
 <div id="<%= dom_id post %>">
-  <p>
-    <strong>Body:</strong>
-    <%= post.body %>
-  </p>
-
-  <p>
-    <strong>Num likes:</strong>
-    <%= post.num_likes %>
-  </p>
-
-  <p>
-    <strong>User:</strong>
-    <%= post.user_id %>
-  </p>
-
+    <article class="message">
+      <div class="message-header">
+        <p><%= link_to "Post #{post.id}", post %></p>
+      </div>
+      <div class="message-body">
+            <%= post.body %>
+      </div>
+    </article>
 </div>
