--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/index.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/index.html.erb
@@ -1,14 +1,9 @@
-<p style="color: green"><%= notice %></p>
+<section class="section">
+  <div class="container">
+    <div class="columns">
+      <%= render "profile" %>
+    </div>
+      <%= render "message" %>
+  </div>
+</section>
 
-<h1>Posts</h1>
-
-<div id="posts">
-  <% @posts.each do |post| %>
-    <%= render post %>
-    <p>
-      <%= link_to "Show this post", post %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New post", new_post_path %>
