Fixed some of the CSS

--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_form.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_form.html.erb
@@ -10,13 +10,15 @@
       </ul>
     </div>
   <% end %>
-
-  <div>
-    <%= form.label :body, style: "display: block" %>
-    <%= form.text_area :body %>
+  
+  <div class="field">
+    <div class="control">
+      <%= form.label :create_a_new_post, style: "display: block" %>
+      <%= form.text_area :body, class: "textarea" %>
+    </div>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="control">
+      <%= form.button :submit, class: 'button is-link' %>
   </div>
 <% end %>
