--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/edit.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/edit.html.erb
@@ -1,10 +1,17 @@
-<h1>Editing post</h1>
+<div class="column is-10">
 
-<%= render "form", post: @post %>
+  <h1>Editing post</h1>
 
-<br>
+  <%= render "form", post: @post %>
 
-<div>
-  <%= link_to "Show this post", @post %> |
-  <%= link_to "Back to posts", posts_path %>
+  <br>
+
+  <div>
+    <button class="button is-info is-light">
+      <%= link_to "Show this post", @post %>
+    </button>
+    <button class="button is-info is-light">
+      <%= link_to "Back to posts", posts_path %>
+    </button>
+  </div>
 </div>
