--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_profile.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_profile.html.erb
@@ -2,8 +2,8 @@
   <div class="card-content">
     <div class="media">
       <div class="media-left">
-        <figure class="image is-128x128">
-          <img src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" alt="Placeholder image">
+        <figure class="image is-64x64">
+          <img src="https://www.attendit.net/images/easyblog_shared/July_2018/7-4-18/totw_network_profile_400.jpg" alt="Placeholder image">
         </figure>
       </div>
       <div class="media-content">
@@ -17,7 +17,7 @@
       Phasellus nec iaculis mauris. <a>@bulmaio</a>.
       <a href="#">#css</a> <a href="#">#responsive</a>
       <br>
-      <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+      <time datetime="2016-1-1">11:09 PM - 1 Jan 2022</time>
     </div>
   </div>
 </div>
