--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/index.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/index.html.erb
@@ -1,9 +1,11 @@
 <section class="section">
   <div class="container">
-    <div class="columns">
-      <%= render "profile" %>
-    </div>
-      <%= render "message" %>
+      <div class="column is-10">
+        <%= render "profile" %>
+      </div>
+      <div class="column is-10">
+        <%= render "message" %>
+      </div>
   </div>
 </section>
 
