--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/new.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New post</h1>
+<div class="column is-10">
+  <h1>New post</h1>
 
-<%= render "form", post: @post %>
+    <%= render "form", post: @post %>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Back to posts", posts_path %>
+  <div>
+    <%= link_to "Back to posts", posts_path %>
+  </div>
 </div>
