Added name to the user and some logic to which actions one can make

--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_post.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_post.html.erb
@@ -3,7 +3,7 @@
     <article class="message">
 
       <div class="message-header">
-        <p><%= link_to "Post #{post.id}", post %></p>
+        <p><%= link_to "Post #{post.id} - #{post.user.name}", post %></p>
       </div>
       
       <div class="message-body">
