--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_profile.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_profile.html.erb
@@ -14,10 +14,9 @@
 
     <div class="content">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Phasellus nec iaculis mauris. <a>@bulmaio</a>.
-      <a href="#">#css</a> <a href="#">#responsive</a>
+      Phasellus nec iaculis mauris. 
       <br>
-      <time datetime="2016-1-1">11:09 PM - 1 Jan 2022</time>
+      <time datetime="2022-1-1">11:09 PM - 1 Jan 2022</time>
     </div>
   </div>
 </div>
