--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/show.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/show.html.erb
@@ -4,12 +4,19 @@
   <%= render @post %>
 
   <div class="buttons">
-    <button class="button is-info is-light">
-    <%= link_to "Edit this post", edit_post_path(@post) %>
+    <% if current_user.id == @post.user_id %>
+      <button class="button is-info is-light">
+      <%= link_to "Edit this post", edit_post_path(@post) %>
+    <% end%>
+    
     </button>
       <button class="button is-info is-light">
     <%= link_to "Back to posts", posts_path %>
     </button>
-    <%= button_to "Destroy this post", @post, method: :delete, class: "button is-danger is-light" %>
+
+    <% if current_user.id == @post.user_id %>
+      <%= button_to "Destroy this post", @post, method: :delete, class: "button is-danger is-light" %>
+    <% end%>
+  
   </div>
 </div>
