Added a profile page for the users

--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
         
           <% if current_user %>
             <a class="navbar-item">
-              Signed in as <%= current_user.email %>
+              Signed in as <%= current_user.name %>
             </a>
           <% end %>
 
