--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/index.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/index.html.erb
@@ -1,10 +1,10 @@
 <section class="section">
   <div class="container">
       <div class="column is-10">
-        <%= render "profile" %>
+        <%= render "posts/profile" %>
       </div>
       <div class="column is-10">
-        <%= render "message" %>
+        <%= render "posts/message" %>
       </div>
   </div>
 </section>
