--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/profiles/_profile.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/profiles/_profile.html.erb
@@ -7,10 +7,19 @@
         </figure>
       </div>
       <div class="media-content">
-        <p class="title is-4"><%= current_user.name %></p>
-        <p class="subtitle is-6"><%= current_user.email %></p>
+        <p class="title is-4"><%= @user.name %></p>
+        <p class="subtitle is-6"><%= @user.email %></p>
       </div>
     </div>
+      <div class="media-content">
+        <% if current_user != @user %>
+          <% unless current_user.friends.include?(@user) %>
+            <button class="button is-success is-light">Send a friend request</button>  
+          <% end %>
+        <% end %>
+      </div>
+
+    <hr>
 
     <div class="content">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
