--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/profiles/_profile.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/profiles/_profile.html.erb
@@ -10,22 +10,18 @@
         <p class="title is-4"><%= @user.name %></p>
         <p class="subtitle is-6"><%= @user.email %></p>
       </div>
-    </div>
-      <div class="media-content">
-        <% if current_user != @user %>
-          <% unless current_user.friends.include?(@user) %>
-            <button class="button is-success is-light">Send a friend request</button>  
-          <% end %>
-        <% end %>
       </div>
-
+        <div class="media-content">
+          <% if current_user != @user %>
+            <% unless current_user.friends.include?(@user) %>
+              <%= link_to "Send a friend request", send_request_friend_request_path, class: 'button is-link' %>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
     <hr>
-
     <div class="content">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Phasellus nec iaculis mauris. 
-      <br>
-      <time datetime="2022-1-1">11:09 PM - 1 Jan 2022</time>
+      <%= "Hi my name is #{@user.name}, do you want to be my friend?"%>
     </div>
   </div>
 </div>
