Added a notification if you have a friend request, and added some CSS to the friend request page

--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
@@ -26,14 +26,14 @@
           <% end %>
           
           <%= link_to friend_requests_path, class: "navbar-item" do %>
-            Friend requests: 0
+            Friend requests: <%= FriendRequest.where(friend_id: current_user.id).count %>
           <% end %>
         </div>
         
         <% if current_user %>
           <a class="navbar-item">
             Signed in as <%= current_user.name %>
-          </a>
+          </a> 
         <% end %>
 
         <div class="navbar-end">
