--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/profiles/_profile.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/profiles/_profile.html.erb
@@ -19,9 +19,10 @@
           <% end %>
         </div>
       </div>
-    <hr>
-    <div class="content">
-      <%= "Hi my name is #{@user.name}, do you want to be my friend?"%>
+    <div class="message is-info">
+      <div class="message-body">
+        <%= "Hi my name is #{@user.name}, do you want to be my friend?"%>
+      </div>
     </div>
   </div>
 </div>
