--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/friend_requests/index.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/friend_requests/index.html.erb
@@ -1,11 +1,18 @@
 <h1 class="title"> Friend Requests </h1>
 <% if @friend_requests.any? %>
   <% @friend_requests.each do |request| %>
-      <article class="message">      
-      <div class="message-body">
-        <%= request %>
+  <article class="message">
+    <div class="message-body">
+      <div class="columns">
+        <div class="column is-four-fifths">
+          <%= User.find(request.user_id).name %> would like to be your friend
+        </div>
+        <div class="column"><button class="button is-success">Accept</button></div>
+        <div class="column"><button class="button is-danger">Decline</button></div>
       </div>
-    </article>
+    </div>
+  </article>
+  <hr />
   <% end%>
 <% else %>
     <article class="message">      
