--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
             Home
           <% end %>
           
-          <%= link_to friend_requests_path, class: "navbar-item" do %>
+          <%= link_to friend_request_path(current_user), class: "navbar-item" do %>
             Friend requests: <%= FriendRequest.where(friend_id: current_user.id).count %>
           <% end %>
         </div>
