--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_profile.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_profile.html.erb
@@ -1,4 +1,5 @@
 <p style="color: green"><%= notice %></p>
+<p style="color: red"><%= warning %></p>
 
 <div class="card">
   <div class="card-content">
