Fixed some logic and added possibilty to decline a request

--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/friend_requests/show.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/friend_requests/show.html.erb
@@ -13,6 +13,7 @@
               </button></div>
               
               <div class="column"><button class="button is-danger">
+                <%= link_to "Decline", decline_request_friend_request_path(req) %>
               </button></div>
 
             </div>
