--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/profiles/_profile.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/profiles/_profile.html.erb
@@ -14,7 +14,9 @@
         <div class="media-content">
           <% if current_user != @user %>
             <% unless current_user.friends.include?(@user) %>
-              <%= link_to "Send a friend request", send_request_friend_request_path, class: 'button is-link' %>
+              <% unless FriendRequest.where(user_id: current_user.id, friend_id: @user.id).any? %>
+                <%= link_to "Send a friend request", send_request_friend_request_path, class: 'button is-link' %>
+              <% end %>
             <% end %>
           <% end %>
         </div>
