Added comments to posts

--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/comments/_comment.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/comments/_comment.html.erb
@@ -1,17 +1,6 @@
 <div id="<%= dom_id comment %>">
-  <p>
-    <strong>Body:</strong>
+  <p class="mb-4">
+    Comment:
     <%= comment.body %>
   </p>
-
-  <p>
-    <strong>Commentable:</strong>
-    <%= comment.commentable_id %>
-  </p>
-
-  <p>
-    <strong>Commentable type:</strong>
-    <%= comment.commentable_type %>
-  </p>
-
 </div>
