--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/show.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/show.html.erb
@@ -19,4 +19,23 @@
     <% end%>
   
   </div>
+  
+  <h4 class="title is-4">Comments</h4>
+  <p>
+    <% if @post.comments.any? %>
+      <%= render @post.comments %>
+    <% else %> 
+      No comments yet.
+    <% end %>
+  </p>
+
+  <hr>
+
+  <p>
+    <h4 class="title is-4">Add a comment</h4>
+    <%= render "comments/form" %>
+  </p>
+
 </div>
+
+
