--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_post.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_post.html.erb
@@ -1,8 +1,8 @@
 <div id="<%= dom_id post %>">
 
-    <article class="message">
+    <article class="message is-link">
       <div class="message-header">
-        <p><%= link_to "Post #{post.id} - #{post.user.name}", post %></p>
+        <p><%= link_to "Post by #{post.user.name}", post %></p>
           <span class="icon">
             <div><%= Like.where(like: true, post_id: post.id).count %></div>
             <% if Like.where(like: true, user_id: current_user.id, post_id: post.id).any? %>
@@ -16,7 +16,7 @@
             <% end %>
           </span>
       </div>
-      <div class="message-body">
+      <div style="color: black" class="message-body">
         <%= post.body %>
       </div>
     </article>
