--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_profile.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_profile.html.erb
@@ -8,8 +8,10 @@
           <img src="https://www.attendit.net/images/easyblog_shared/July_2018/7-4-18/totw_network_profile_400.jpg" alt="Placeholder image">
         </figure>
       </div>
-      <div class="media-content">
-        <p class="title is-4"><%= current_user.name %></p>
+      <div class="media-content">              
+        <%= link_to profile_path(current_user) do %>
+          <p class="title is-4"><%= current_user.name %></p>
+        <% end %>
         <p class="subtitle is-6"><%= current_user.email %></p>
       </div>
     </div>
