--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/profiles/_profile.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/profiles/_profile.html.erb
@@ -27,4 +27,9 @@
       </div>
     </div>
   </div>
+  <div class="mt-4">
+    <% @posts.each do |post| %>
+      <%= render post %>
+    <% end%>
+  </div>
 </div>
