Added buttons for sending friend request to the front page

--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/layouts/application.html.erb
@@ -60,7 +60,9 @@
     </nav>
     <section class="section">
       <div class="container">
-        <%= yield %>
+        <div class="columns">
+          <%= yield %>
+        </div>
       </div>
     </section>
   </body>
