--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_post.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id post %>">
 
-    <article class="message is-link">
+    <article class="message is-info">
       <div class="message-header">
         <p><%= link_to "Post by #{post.user.name}", post %></p>
           <span class="icon">
