--- a/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/index.html.erb
+++ b/Ruby on Rails/Project - Building Facebook/odin-facebook/app/views/posts/index.html.erb
@@ -4,31 +4,37 @@
 </div>
 
 <div class="column is-4">
-  <div class="content is-normal">
-    <h1>Non-friended users</h1>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Friend request</th>
-        </tr>
-      </thead>
-      <% @users.each do |user| %>
-        <div class="mb-2">
-          <tbody>
+<div class="card">
+  <div class="card-content">
+    <div class="media">
+      <div class="content">
+        <h1>Non-friended users</h1>
+        <table class="table">
+          <thead>
             <tr>
+              <th>Name</th>
+              <th>Friend request</th>
+            </tr>
+          </thead>
+          <% @users.each do |user| %>
+            <div class="mb-2">
               <% if current_user != user %>
                 <% unless current_user.friends.include?(user) %>
                   <% unless FriendRequest.where(user_id: current_user.id, friend_id: user.id).any? %>
-                    <td><%= user.name %></td>
-                    <td><%= link_to "Send a friend request", send_request_friend_request_path(user), class: 'button is-rounded is-small is-info' %> </td>
+                    <tbody>
+                      <tr>
+                        <td><%= user.name %></td>
+                        <td><%= link_to "Send a friend request", send_request_friend_request_path(user), class: 'button is-rounded is-small is-info' %> </td>
+                      </tr>
+                    </tbody>
                   <% end %>
                 <% end %>
               <% end %>
-            </tr>
-          </tbody>
-        </div>
-      <% end %>
-    </table>
+            </div>
+          <% end %>
+        </table>
+      </div>
+    </div>
+    </div>
   </div>
 </div>
