Final touches - not completely similar, but close enough.

--- a/Intermediate HTML and CSS/Project Admin Dashboard/admindashboard/app/views/dashboards/index.html.erb
+++ b/Intermediate HTML and CSS/Project Admin Dashboard/admindashboard/app/views/dashboards/index.html.erb
@@ -19,8 +19,29 @@
         </div>
         <div class="profile">
           <%= image_tag "profile.png", :class=> "img-circular" %>
+          <span class="header-hello"><strong>Hi there,</strong></span>
+          <span class="header-user"><h3>Morgan Oakley (@morgan)</h3></span>
+        </div>
+
+        <div class="control-panel-top">
+          <div class="control-panel-profile">
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+              <path fill="currentColor" d="M10,21H14A2,2 0 0,1 12,23A2,2 0 0,1 10,21M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M17,11A5,5 0 0,0 12,6A5,5 0 0,0 7,11V18H17V11M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" />
+            </svg>
+            <span><%= image_tag "profile.png", :class=> "img-circular" %></span>
+            <span><strong>Morgan Oakley</strong></span>
+          </div>
+        </div>
+
+        <div class="control-panel-bottom">
+          <div class="control-panel-button">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+          </div>
         </div>
       </div>
+
 
       <div class="sidebar">
         <div class="top-content">
@@ -136,9 +157,7 @@
         <div class="card">
           <div class="trening-cards">
             <div class="title">
-              <svg style="width:36px;height:36px" viewBox="0 0 26 26">
-                <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
-              </svg>
+              <%= image_tag "friend1.png", :class=> "img-circular" %>
                 @tegan 1
                 <br>
                 World Peace Builder
@@ -146,9 +165,7 @@
             
 
             <div class="title">
-              <svg style="width:36px;height:36px" viewBox="0 0 26 26">
-                <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
-              </svg>
+              <%= image_tag "profile.png", :class=> "img-circular" %>
               @morgan 1
               <br>
               Super Cool Project
@@ -156,18 +173,14 @@
             
 
             <div class="title">
-              <svg style="width:36px;height:36px" viewBox="0 0 26 26">
-                <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
-              </svg>
+              <%= image_tag "friend2.png", :class=> "img-circular" %>
               @kendall
               <br>
               Life Changing App
             </div>
 
             <div class="title">
-              <svg style="width:36px;height:36px" viewBox="0 0 26 26">
-                <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
-              </svg>
+              <%= image_tag "friend3.jpg", :class=> "img-circular" %>
               @alex
               <br>
               No Traffix Maker
