--- a/Foundations/Flexbox/Project - Landing Page/styles.css
+++ b/Foundations/Flexbox/Project - Landing Page/styles.css
@@ -13,10 +13,14 @@ body {
     display: flex;
     background-color: #1F2937;
     color: #e5e7eb;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 175px;
+    padding-right: 175px;
     align-items: center;
     justify-content: space-between;
+}
+
+.logo {
+    font-weight: bold;
 }
 
 a {
@@ -26,7 +30,7 @@ a {
 ul {
     display: flex;
     list-style: none;
-    gap: 8px;
+    gap: 16px;
     color: #e5e7eb;
 
 }
@@ -43,10 +47,51 @@ ul {
 }
 
 .headerinfo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100%;
     background-color: #1F2937;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 175px;
+    padding-right: 175px;
+    color: #e5e7eb;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.leftinfo {
+    width: 100%;
+}
+
+.rightinfo {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: grey;
+    color: #e5e7eb;
+    align-items: center;
+    justify-content: center;
+}
+
+.maintext {
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+.leftinfotext {
+    padding-bottom: 8px;
+    font-size: 18px;
+}
+
+.infobutton {
+    background-color: #3882f6;
+    border: #1F2937;
+    font-size: 16px;
+    width: 100px;
+    height: 30px;
+    border-radius: 5px;
+    color: #e5e7eb;
+    font-weight: bold;
 }
 
 .information {
